--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "test:e2e": "jest --config ./apps/api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.1.1",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/bull": "^10.1.1",
     "@prisma/client": "^5.20.0",
-    "resend": "^4.0.0",
     "bullmq": "^5.25.0",
     "ioredis": "^5.4.1",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.0.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
   },
