fix: correct PostgreSQL service type in render.yaml
- Change type from 'pgsql' to 'postgres' (correct Render type)
- Fixes Render deployment error: 'unknown type pgsql'

--- a/render.yaml
+++ b/render.yaml
@@ -47,7 +47,7 @@ services:
     # Start command (handled by Dockerfile CMD)
 
   # PostgreSQL Database
-  - type: pgsql
+  - type: postgres
     name: newsletter-db
     plan: starter
     region: oregon
