fix: correct render.yaml configuration errors
- Remove REDIS_PASSWORD env var (password property not available for Redis)
- Add REDIS_URL using connectionString property instead
- Remove sync: false from SENDER_EMAIL (cannot have both value and sync)
- Add ipAllowList: [] to Redis service (required field)

--- a/render.yaml
+++ b/render.yaml
@@ -25,16 +25,16 @@ services:
           name: newsletter-redis
           type: redis
           property: port
-      - key: REDIS_PASSWORD
+      # Redis connectionString (includes auth if needed)
+      - key: REDIS_URL
         fromService:
           name: newsletter-redis
           type: redis
-          property: password
+          property: connectionString
       # Email service
       - key: RESEND_API_KEY
         sync: false
       - key: SENDER_EMAIL
-        sync: false
         value: onboarding@resend.dev
       # Application
       - key: NODE_ENV
@@ -51,6 +51,7 @@ services:
     plan: starter
     region: oregon
     maxmemoryPolicy: allkeys-lru
+    ipAllowList: []  # Allow all IPs (empty array means allow all)
 
 databases:
   # PostgreSQL Database
