feat: add Swagger API documentation
- Configure Swagger UI at /api endpoint with DocumentBuilder
- Add ApiProperty decorators to all DTOs (subscribers, topics, content)
- Add ApiTags, ApiOperation, ApiResponse decorators to all controllers
- Add comprehensive API documentation with examples and descriptions
- Update README with Swagger UI section and access URLs
- Install @nestjs/swagger dependency

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.3",
     "@prisma/client": "^5.20.0",
     "bullmq": "^5.25.0",
     "ioredis": "^5.4.1",
